Loose vertices only partially drawn #60476

Closed
opened 2019-01-13 20:35:23 +01:00 by Ihor · 3 comments

System Information
Operating system: Windows 10 x64 Pro
Graphics card: Nvidia GeForce 960M 4GB

Blender Version
Broken:
Broken: Blender 2.8, 2826c2be54, 2019-01-12

Short description of error
Visual cuts the Vertex after Extrude operation

Exact steps for others to reproduce the error

  1. Open Blender 2.8
  2. Select Any Mesh
  3. Go to Edit Mode(Tab)
  4. Select any Vertex
  5. Extrude this Vertex(E)
  6. Visually cuts this Vertex in a half

I was increase Vertex size for better visibility
Vertex.png

**System Information** Operating system: Windows 10 x64 Pro Graphics card: Nvidia GeForce 960M 4GB **Blender Version** Broken: Broken: Blender 2.8, 2826c2be545e, 2019-01-12 **Short description of error** Visual cuts the Vertex after Extrude operation **Exact steps for others to reproduce the error** 1) Open Blender 2.8 2) Select Any Mesh 3) Go to Edit Mode(Tab) 4) Select any Vertex 5) Extrude this Vertex(E) 6) Visually cuts this Vertex in a half I was increase Vertex size for better visibility ![Vertex.png](https://archive.blender.org/developer/F6278337/Vertex.png)
Author

Added subscriber: @Choliy

Added subscriber: @Choliy
Ihor changed title from Cuts Vertex in a half After Extrude Operation to Cuts Vertex in a half after Extrude operation 2019-01-13 20:36:41 +01:00
Clément Foucault was assigned by Campbell Barton 2019-01-14 01:21:51 +01:00
Campbell Barton changed title from Cuts Vertex in a half after Extrude operation to Loose vertices only partially drawn 2019-01-14 01:23:29 +01:00

This issue was referenced by 6f9e3e9d33

This issue was referenced by 6f9e3e9d330625a465456b8de287a4b06c60b879

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60476
No description provided.