Fix T60476 Loose vertices only partially drawn

Was caused by a missing vbo attachement.

Also fix said Vbo refreshing when selecting.